# chatServer

./: CMakeLists.txt  README.md
include/: public.hpp
include/server/: chatserver.hpp  chatservice.hpp
include/server/db/: db.h
include/server/model/: user.hpp  usermodel.hpp
mysql/: runMySql.sh  tables.txt
mysql/data/: auto.cnf  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  private_key.pem  public_key.pem  server-cert.pem  server-key.pem
mysql/data/chat/: AllGroup.frm  AllGroup.ibd  Friend.frm  Friend.ibd  GroupUser.frm  GroupUser.ibd  OfflineMessage.frm  OfflineMessage.ibd  User.frm  User.ibd
mysql/data/mysql/: columns_priv.MYI  db.MYI  engine_cost.ibd  event.MYI  func.MYI  innodb_index_stats.ibd  innodb_table_stats.ibd  ndb_binlog_index.MYI  proc.MYD  proc.MYI  procs_priv.MYI  proxies_priv.MYI  server_cost.ibd  tables_priv.MYD  tables_priv.MYI  user.MYD  user.MYI
mysql/data/sys/: host_summary.frm  host_summary_by_file_io.frm  host_summary_by_file_io_type.frm  host_summary_by_stages.frm  host_summary_by_statement_latency.frm  host_summary_by_statement_type.frm  innodb_buffer_stats_by_schema.frm  innodb_buffer_stats_by_table.frm  innodb_lock_waits.frm  io_by_thread_by_latency.frm  io_global_by_file_by_bytes.frm  io_global_by_file_by_latency.frm  io_global_by_wait_by_bytes.frm  io_global_by_wait_by_latency.frm  latest_file_io.frm  metrics.frm  (+86 more)
nginx/: nginx.conf  runNginx.sh
redis/: redis.conf  runRedis.sh
redis/data/: dump.rdb
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
(+3 files in other folders)
